# memory-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: handoff.md
.claude-plugin/skills/recall-nudge/: SKILL.md
.claude/skills/: release.md
.claude/skills/publish/: SKILL.md
.claude/skills/test-memory/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.planning/superpowers/plans/: 2026-07-01-v0.8-loop-observability-plan.md
docs/: API.md  REFERENCE.md
docs/examples/: cross-session-continuity.md  project-onboarding.md
docs/superpowers/specs/: 2026-07-01-v0.8-loop-observability-design.md
hooks/: memory-log-response.sh
scripts/: build-dashboard-css.sh  bump-version.sh  tailwind.dashboard.config.js
skills/memory-mcp/: SKILL.md
src/memory_mcp/: __init__.py  analysis.py  cli.py  config.py  embeddings.py  helpers.py  logging.py  migrations.py  mining.py  ml_classification.py  models.py  probe.py  responses.py  server.py  storage.py  text_parsing.py
src/memory_mcp/dashboard/: app.py
src/memory_mcp/server/: __init__.py  app.py
src/memory_mcp/storage/: __init__.py  core.py  hot_cache.py  injection_tracking.py  maintenance.py  memory_crud.py  (+7 more)
tests/: conftest.py  test_analysis.py  test_bug_regressions.py  test_cli.py  test_dashboard.py  test_embeddings.py  test_hook.py  test_loop_observability.py  test_mining.py  test_plugin.py  test_server.py  test_storage.py
(+24 files in other folders)
