[project]
name = "memory-mcp"
version = "0.1.0"
description = "Engram-inspired memory MCP server with hot cache and pattern mining"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Memory MCP Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0,<3",  # Pin to v2 for stability until v3 is released
    "sqlite-vec>=0.1",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "click>=8.0",
]

[project.scripts]
memory-mcp = "memory_mcp.server:main"
memory-mcp-cli = "memory_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/michael-denyer/memory-mcp"
Repository = "https://github.com/michael-denyer/memory-mcp"
Issues = "https://github.com/michael-denyer/memory-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=3.0",
    "ruff>=0.8",
]
